Follow API changes in vespa-engine/vespa#20350